--- a/gemma_3_27b_it_Q3_K_L_gguf.ipynb
+++ b/gemma_3_27b_it_Q3_K_L_gguf.ipynb
@@ -66,186 +66,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LSzdZM6ILO8Y",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "d0116d97-e428-4ba9-e27c-0a27242ed9b1"
+        "id": "LSzdZM6ILO8Y"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[33mWARNING: No matching packages\u001b[0m\u001b[33m\n",
-            "\u001b[0mFiles removed: 0\n",
-            "\u001b[33mWARNING: Skipping llama-cpp-python as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0mCollecting llama-cpp-python\n",
-            "  Downloading llama_cpp_python-0.3.8.tar.gz (67.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.3/67.3 MB\u001b[0m \u001b[31m37.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Installing backend dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: typing-extensions>=4.5.0 in /usr/local/lib/python3.11/dist-packages (from llama-cpp-python) (4.12.2)\n",
-            "Requirement already satisfied: numpy>=1.20.0 in /usr/local/lib/python3.11/dist-packages (from llama-cpp-python) (1.26.4)\n",
-            "Collecting diskcache>=5.6.1 (from llama-cpp-python)\n",
-            "  Downloading diskcache-5.6.3-py3-none-any.whl.metadata (20 kB)\n",
-            "Requirement already satisfied: jinja2>=2.11.3 in /usr/local/lib/python3.11/dist-packages (from llama-cpp-python) (3.1.5)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2>=2.11.3->llama-cpp-python) (3.0.2)\n",
-            "Downloading diskcache-5.6.3-py3-none-any.whl (45 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.5/45.5 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hBuilding wheels for collected packages: llama-cpp-python\n",
-            "  Building wheel for llama-cpp-python (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for llama-cpp-python: filename=llama_cpp_python-0.3.8-cp311-cp311-linux_x86_64.whl size=46318430 sha256=5648af82238c278c4d56b8249192ba71388c347873cf0282d2c9e6ce108410cb\n",
-            "  Stored in directory: /root/.cache/pip/wheels/c0/03/66/eb3810eafd55d921b2be32896d1f44313996982360663aa80b\n",
-            "Successfully built llama-cpp-python\n",
-            "Installing collected packages: diskcache, llama-cpp-python\n",
-            "Successfully installed diskcache-5.6.3 llama-cpp-python-0.3.8\n",
-            "Zipping from: /usr/local/lib/python3.11/dist-packages/llama_cpp\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/ (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/_logger.py (deflated 58%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_grammar.py (deflated 75%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/_ggml.py (deflated 39%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/ (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/_logger.cpython-311.pyc (deflated 39%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/_ctypes_extensions.cpython-311.pyc (deflated 51%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/_ggml.cpython-311.pyc (deflated 32%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama.cpython-311.pyc (deflated 60%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/__init__.cpython-311.pyc (deflated 21%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_chat_format.cpython-311.pyc (deflated 62%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llava_cpp.cpython-311.pyc (deflated 54%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_cache.cpython-311.pyc (deflated 61%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_grammar.cpython-311.pyc (deflated 55%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_speculative.cpython-311.pyc (deflated 46%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/_utils.cpython-311.pyc (deflated 57%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_cpp.cpython-311.pyc (deflated 72%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/_internals.cpython-311.pyc (deflated 67%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_types.cpython-311.pyc (deflated 69%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__pycache__/llama_tokenizer.cpython-311.pyc (deflated 58%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/_utils.py (deflated 67%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_speculative.py (deflated 63%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_types.py (deflated 80%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_chat_format.py (deflated 85%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_cache.py (deflated 77%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama.py (deflated 81%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/py.typed (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_cpp.py (deflated 82%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/_ctypes_extensions.py (deflated 66%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llava_cpp.py (deflated 71%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/_internals.py (deflated 81%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/llama_tokenizer.py (deflated 75%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/ (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/app.py (deflated 77%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/errors.py (deflated 73%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/ (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/errors.cpython-311.pyc (deflated 52%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/__init__.cpython-311.pyc (deflated 20%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/cli.cpython-311.pyc (deflated 49%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/types.cpython-311.pyc (deflated 60%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/__main__.cpython-311.pyc (deflated 44%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/app.cpython-311.pyc (deflated 57%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/settings.cpython-311.pyc (deflated 56%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__pycache__/model.cpython-311.pyc (deflated 59%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/types.py (deflated 75%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/model.py (deflated 83%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/settings.py (deflated 71%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/cli.py (deflated 70%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__init__.py (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/server/__main__.py (deflated 63%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/__init__.py (deflated 22%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/ (stored 0%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/libllava.so (deflated 59%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/libggml.so (deflated 67%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/libggml-cpu.so (deflated 60%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/libllama.so (deflated 62%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/libggml-base.so (deflated 61%)\n",
-            "  adding: usr/local/lib/python3.11/dist-packages/llama_cpp/lib/libggml-cuda.so (deflated 74%)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_ad056941-3b6c-44d2-bb41-59710455a764\", \"llama_cpp.zip\", 21725362)"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ggml_cuda_init: GGML_CUDA_FORCE_MMQ:    no\n",
-            "ggml_cuda_init: GGML_CUDA_FORCE_CUBLAS: no\n",
-            "ggml_cuda_init: found 1 CUDA devices:\n",
-            "  Device 0: NVIDIA L4, compute capability 8.9, VMM: yes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Compile CUDA Llama-cpp-python (~ 25 minutes)\n",
         "!pip cache purge  # or pip cache remove llama-cpp-python\n",
@@ -388,6 +211,19 @@
         "# gpu enable must be True\n",
         "print(llama_cpp.llama_supports_gpu_offload())\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 'llm' in globals():\n",
+        "    del llm\n",
+        "    gc.collect()"
+      ],
+      "metadata": {
+        "id": "sBN4TiMVhmlL"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5429,56 +5265,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 191
-        },
-        "id": "lgsT0xavs7sM",
-        "outputId": "2c7cd59a-f0c5-464b-a749-a58c2fd83b48"
+        "id": "lgsT0xavs7sM"
       },
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<b>Resposta:</b> <div id='response'></div><br><br><br>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Llama.generate: 14 prefix-match hit, remaining 1 prompt tokens to eval\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<script>document.getElementById('response').innerHTML += '';</script>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "llama_perf_context_print:        load time =     480.90 ms\n",
-            "llama_perf_context_print: prompt eval time =       0.00 ms /     1 tokens (    0.00 ms per token,      inf tokens per second)\n",
-            "llama_perf_context_print:        eval time =    5891.00 ms /    43 runs   (  137.00 ms per token,     7.30 tokens per second)\n",
-            "llama_perf_context_print:       total time =    6034.77 ms /    44 tokens\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from IPython.display import display, HTML\n",
         "\n",
