--- a/base_semantic_segment_completion.ipynb
+++ b/base_semantic_segment_completion.ipynb
@@ -177,7 +177,7 @@
         "\n",
         "llm = Llama.from_pretrained(\n",
         "\trepo_id=\"lmstudio-community/gemma-3-27b-it-GGUF\",\n",
-        "\tfilename=\"gemma-3-27b-it-Q3_K_L.gguf\",\n",
+        "\tfilename=\"gemma-3-27b-it-Q4_K_M.gguf\",\n",
         "\tn_ctx=8192,\n",
         "  n_threads=3,\n",
         "  n_gpu_layers=70,\n",
